# cabin

./: .gitignore  .rustfmt.toml  Cargo.toml  build.rs
.github/workflows/: ci.yml
cabin-css/: Cargo.toml  build.rs
cabin-css/src/: base.css  class_name.rs  lib.rs  registry.rs
cabin-css/src/preflight/: preflight-v3.2.4.css
cabin-css/src/pseudo/: active.rs  after.rs  apply_to_children.rs  before.rs  disabled.rs  enabled.rs  focus.rs  focus_visible.rs  focus_within.rs  group_hover.rs  hover.rs  max_width.rs  min_width.rs  mod.rs  visited.rs
cabin-css/src/snapshots/: cabin_css__registry__deduplication.snap  cabin_css__registry__order.snap
cabin-css/src/utilities/: aspect.rs  auto_cols.rs  basis.rs  bg.rs  border.rs  bottom.rs  cursor.rs  display.rs  flex.rs  font.rs  from.rs  gap.rs  gap_x.rs  gap_y.rs  grid.rs  h.rs  items.rs  justify.rs  left.rs  m.rs  max_h.rs  max_w.rs  mb.rs  me.rs  min_h.rs  min_w.rs  ml.rs  mod.rs  mr.rs  ms.rs  mt.rs  mx.rs  my.rs  order.rs  outline.rs  p.rs  pb.rs  pl.rs  position.rs  pr.rs  (+12 more)
cabin-macros/: Cargo.toml
cabin-macros/src/: boundaries_macro.rs  boundary_attribute.rs  derive_attribute.rs  derive_attributes.rs  derive_element.rs  derive_event.rs  element_attribute.rs  length_aliases_attribute.rs  lib.rs  styles_macro.rs  tw_macro.rs  view_macro_attribute.rs
cabin-service/: Cargo.toml
cabin-service/src/: assets.rs  boundaries.rs  framework.rs  lib.rs  livereload.rs  redirects.rs
cabin-tailwind/: Cargo.toml  build.rs
cabin-tailwind/src/: base.css  class_name.rs  lib.rs  macros.rs  registry.rs
cabin-tailwind/src/pseudo/: active.rs  after.rs  animate_from.rs  animate_to.rs  apply_to_children.rs  before.rs  custom.rs  dark.rs  disabled.rs  enabled.rs  focus.rs  focus_visible.rs  focus_within.rs  group_hover.rs  hover.rs  max_container_width.rs  max_width.rs  min_container_width.rs  min_width.rs  mod.rs  print.rs  visited.rs
cabin-tailwind/src/snapshots/: cabin_css__registry__deduplication.snap  cabin_css__registry__order.snap  cabin_tailwind__registry__order.snap
cabin-tailwind/src/utilities/: animation.rs  appearance.rs  auto_cols.rs  auto_rows.rs  basis.rs  bg.rs  border.rs  bottom.rs  box_.rs  break_.rs  break_after.rs  break_before.rs  break_inside.rs  col.rs  container.rs  content.rs  decoration.rs  divide.rs  ease.rs  end.rs  flex.rs  font.rs  from.rs  gap.rs  gap_x.rs  gap_y.rs  grid.rs  h.rs  inset.rs  items.rs  justify.rs  leading.rs  left.rs  line.rs  list.rs  m.rs  max_h.rs  max_w.rs  mb.rs  me.rs  (+41 more)
cabin-tailwind/src/utilities/bg/: clip.rs
cabin-tailwind/src/utilities/grid/: flow.rs
cabin-tailwind/src/utilities/inset/: x.rs  y.rs
cabin-tailwind/src/utilities/justify/: self_.rs
cabin-tailwind/src/utilities/rounded/: b.rs  bl.rs  br.rs  l.rs  r.rs  t.rs  tl.rs  tr.rs
crabweb-macros/: Cargo.toml
crabweb-macros/src/: lib.rs
crabweb-service/: Cargo.toml
crabweb-service/src/: lib.rs
examples/: async.rs  boundary.rs  boundary_error.rs  children.rs  concurrency.rs  counter.rs  dialog.rs  dropdown.rs  error.rs  form.rs  input.rs  list-identity.rs  list.rs  nested.rs  previous.rs  proxy.rs  style.rs
rustend-css/: Cargo.toml  build.rs  todo.txt
rustend-css-build/: Cargo.toml
rustend-css-build/src/: lib.rs
rustend-css/src/: aspect.rs  bg.rs  display.rs  lib.rs  position.rs  registry.rs  text.rs
rustend-css/src/preflight/: preflight-v3.2.4.css
rustend-css/src/pseudo/: active.rs  focus.rs  group_hover.rs  hover.rs  mod.rs
rustend-css/src/utilities/: basis.rs  bg.rs  display.rs  grid_cols.rs  m.rs  max_w.rs  mb.rs  min_w.rs  ml.rs  mod.rs  mr.rs  mt.rs  mx.rs  my.rs  p.rs  pl.rs  position.rs  px.rs  py.rs  text.rs  w.rs
rustend-macros/: Cargo.toml
rustend-macros/src/: lib.rs
rustend-preset/: Cargo.toml
rustend-preset/src/: lib.rs  text.rs
rustend-service/: Cargo.toml
rustend-service/src/: framework.rs  lib.rs
src/: action.rs  actions.rs  attribute.rs  boundary_registry.rs  cabin.js  child.rs  component.rs  context.rs  element.rs  error.rs  event.rs  fire_event.rs  fragment.rs  html.rs  lib.rs  livereload.js  local_pool.rs  multipart.rs  pack.rs  pair.rs  prelude.rs  previous.rs  private.rs  redirect.rs  render.rs  renderer_pool.rs  restore.rs  scope.rs  serde.rs  server-component.js  server.rs  signal.rs  state.rs  style.rs  view.rs  void_element.rs  wasm_exports.rs
src/action/: registry.rs
src/component/: id.rs  registry.rs
src/html/: attributes.rs  class_name.rs  element_ext.rs  elements.rs  events.rs  fragment.rs  list.rs  macros.rs  raw.rs
src/html/elements/: anchor.rs  area.rs  aria.rs  audio.rs  base.rs  blockquote.rs  body.rs  button.rs  canvas.rs  col.rs  colgroup.rs  common.rs  data.rs  del.rs  details.rs  dialog.rs  div.rs  embed.rs  fieldset.rs  fire_event.rs  form.rs  global.rs  h1.rs  h2.rs  h3.rs  h4.rs  h5.rs  h6.rs  head.rs  html.rs  iframe.rs  img.rs  input.rs  ins.rs  label.rs  li.rs  link.rs  map.rs  meta.rs  meter.rs  (+23 more)
src/render/: marker.rs  test.rs  tests.rs
src/render/tests/: component_render_test.rs  list_identity_test.rs  nested_render_test.rs  state_test.rs
src/style/: animation.rs  base.css  class_name.rs  collector.rs  color.rs  font.rs  length.rs  modifier.rs  preset.rs  property_display.rs  registry.rs  style_definition.rs  sub_style.rs  text.rs  theme.rs
src/style/forms/: forms-v0.5.11.css  forms-v0.5.3.css
src/style/modifier/: modifier01_pseudo_active.rs  modifier02_pseudo_disabled.rs  modifier03_pseudo_enabled.rs  modifier04_pseudo_focus.rs  modifier05_pseudo_focus_visible.rs  (+8 more)
src/tailwind/: base.css  macros.rs  mod.rs  registry.rs  tailwind.rs
src/view/: any.rs  boundary.rs  boxed.rs  chunk.rs  deferred.rs  error.rs  fragment.rs  future.rs  hash.rs  internal.rs  iter.rs  macros.rs  raw.rs  text.rs  update.rs
tests/: counter_test.rs  style_tests.rs
tests/snapshots/: style_tests__animation.snap  style_tests__basic_properties.snap  style_tests__divide.snap  style_tests__divide_space_merge.snap  style_tests__max_page_width.snap  style_tests__merge_same_modifiers.snap  style_tests__pseudo_active.snap  style_tests__pseudo_combination.snap
(+164 files in other folders)
