[package]
name = "cabin"
version = "0.2.0"
edition = "2021"
authors = ["Markus Ast <m@rkusa.st>"]
license = "MIT OR Apache-2.0"
description = "Server-first toolkit to build web apps"
repository = "https://github.com/rkusa/cabin"

[workspace]
members = ["cabin-tailwind", "cabin-macros", "cabin-service"]

[features]
default = ["livereload"]
livereload = []

[dependencies]
bytes = "1.2"
cabin-macros = { path = "./cabin-macros", version = "0.2" }
futures-util = "0.3"
http = "1.0"
http-body = "1.0"
http-body-util = "0.1"
http-error = { version = "0.3.0-alpha.1", features = [
    "tracing",
] } # git = "https://github.com/rkusa/http-error.git", rev = "1f0630c" } # path = "../http-error" }
linkme = "0.3"
mime = "0.3"
multer = { version = "3.0", features = ["json"] }
num_cpus = "1.15"
once_cell = "1.15"
serde = { version = "1.0", features = ["derive"] }
serde_html_form = "0.2"
serde_json = { version = "1.0", features = ["raw_value"] }
tokio = { version = "1.0", features = ["rt"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
twox-hash = { version = "2.0", default-features = false, features = [
    "xxhash32",
    "std",
] }

[dev-dependencies]
axum = "0.7"
cabin-tailwind = { path = "./cabin-tailwind", default-features = false }
cabin-service = { path = "./cabin-service" }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "std",
    "fmt",
    "ansi",
] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
