[package]
name = "cabin-service"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.2"
cabin = { version = "0.1", path = "../", default-features = false }
cabin-tailwind = { version = "0.1", path = "../cabin-tailwind", default-features = false, optional = true }
http = "0.2"
http-body = "0.4"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.28", optional = true, default-features = false, features = ["time"] }
tower-service = "0.3"
tower-layer = "0.3"
tracing = "0.1"

[features]
default = ["livereload", "cabin-tailwind"]
livereload = ["tokio"]
