[package]
name = "cabin-service"
version = "0.2.0"
edition = "2024"
authors = ["Markus Ast <m@rkusa.st>"]
license = "MIT OR Apache-2.0"
description = "Tower service for cabin"
repository = "https://github.com/rkusa/cabin"

[dependencies]
bytes = "1.2"
cabin = { version = "0.2", path = "../", default-features = false }
cabin-tailwind = { version = "0.2", path = "../cabin-tailwind", default-features = false }
futures-util = "0.3"
http = "1.0"
http-body = "1.0"
http-body-util = "0.1"
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.28", optional = true, default-features = false, features = [
    "time",
] }
tokio-util = "0.7"
tower-layer = "0.3"
tower-service = "0.3"
tracing = "0.1"

[features]
default = ["livereload"]
livereload = ["tokio"]
