[package]
name = "cabin-tailwind"
version = "0.1.0"
edition = "2021"

[features]
default = ["preflight"]
preflight = []
forms = []

[dependencies]
linkme = "0.3"
once_cell = "1.15"
cabin = { version = "0.1", path = "../", default-features = false }
cabin-macros = { path = "../cabin-macros", version = "0.1" }
twox-hash = "1.6"

[dev-dependencies]
insta = "1.30"
