[package]
name = "rustend-css"
version = "0.1.0"
edition = "2021"

[dependencies]
linkme = "0.3"
once_cell = "1.15"
rustend = { version = "0.1", path = "../" }
rustend-macros = { path = "../rustend-macros", version = "0.1" }
twox-hash = "1.6"

[features]
default = ["preflight"]
preflight = []
forms = []
