[package]
name = "rustend-service"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.2"
rustend = { version = "0.1", path = "../" }
rustend-css = { version = "0.1", path = "../rustend-css", default-features = false, optional = true }
http = "0.2"
http-body = "0.4"
hyper = { version = "0.14" }
mime = "0.3"
serde_json = "1.0"
thiserror = "1.0"
tower-service = "0.3"

[features]
default = ["rustend-css"]
